// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DNoteUtils findClosestParent, parent grandchild -> domain root: main 1`] = `
Object {
  "body": "",
  "children": Array [],
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "baz",
  "parent": "Root",
  "stub": false,
  "title": "Baz",
  "type": "note",
}
`;

exports[`DNoteUtils findClosestParent, parent grandchild -> parent: main 1`] = `
Object {
  "body": "",
  "children": Array [
    "Alpha",
  ],
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "foo.one",
  "parent": "Foo",
  "stub": false,
  "title": "One",
  "type": "note",
}
`;

exports[`DNoteUtils findClosestParent, parent grandchild -> root: main 1`] = `
Object {
  "body": "",
  "children": Array [
    "Foo",
    "Baz",
  ],
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "root",
  "parent": "root",
  "stub": false,
  "title": "Root",
  "type": "note",
}
`;

exports[`NoteUtils createStubNotes, root -> bar.one: barChild 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "Alpha",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.one",
    "parent": "Bar",
    "stub": false,
    "title": "One",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.one.alpha",
    "parent": "One",
    "stub": false,
    "title": "Alpha",
    "type": "note",
  },
]
`;

exports[`Schema basic unknown schema: unknown 1`] = `
Object {
  "body": "",
  "children": Array [],
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "_UNKNOWN_SCHEMA.schema",
  "parent": "root",
  "stub": true,
  "title": "_UNKNOWN_SCHEMA",
  "type": "schema",
}
`;

exports[`Schema domainRoot at child: fooChild_body 1`] = `
"-
    id: one
    title: foo.yml
    desc: \\"\\"
    data: {}
    parent: root
-
    id: alpha
    title: foo.yml
    desc: \\"\\"
    data: {}
    parent: root
"
`;

exports[`Schema domainRoot at root: foo_body 1`] = `
"-
    id: foo
    title: foo.yml
    desc: \\"\\"
    data: {}
    parent: root
-
    id: one
    title: foo.yml
    desc: \\"\\"
    data: {}
    parent: root
-
    id: alpha
    title: foo.yml
    desc: \\"\\"
    data: {}
    parent: root
"
`;

exports[`SchemaUtils note matchDomain: schemas 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo.yml",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.schema.yml",
    "parent": "root",
    "stub": false,
    "title": "foo.yml",
    "type": "schema",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.yml",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.schema.yml",
    "parent": "foo.yml",
    "stub": false,
    "title": "foo.yml",
    "type": "schema",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.schema.yml",
    "parent": "foo.yml",
    "stub": false,
    "title": "foo.yml",
    "type": "schema",
  },
  Object {
    "body": "",
    "children": Array [
      "bar.yml",
    ],
    "custom": Object {},
    "data": Object {
      "namespace": true,
    },
    "desc": "",
    "fname": "bar.schema.yml",
    "parent": "root",
    "stub": false,
    "title": "bar.yml",
    "type": "schema",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {
      "namespace": true,
    },
    "desc": "",
    "fname": "bar.schema.yml",
    "parent": "bar.yml",
    "stub": false,
    "title": "bar.yml",
    "type": "schema",
  },
]
`;

exports[`SchemaUtils string node: domain: schemas 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo.yml",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.schema.yml",
    "parent": "root",
    "stub": false,
    "title": "foo.yml",
    "type": "schema",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.yml",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.schema.yml",
    "parent": "foo.yml",
    "stub": false,
    "title": "foo.yml",
    "type": "schema",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.schema.yml",
    "parent": "foo.yml",
    "stub": false,
    "title": "foo.yml",
    "type": "schema",
  },
  Object {
    "body": "",
    "children": Array [
      "bar.yml",
    ],
    "custom": Object {},
    "data": Object {
      "namespace": true,
    },
    "desc": "",
    "fname": "bar.schema.yml",
    "parent": "root",
    "stub": false,
    "title": "bar.yml",
    "type": "schema",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {
      "namespace": true,
    },
    "desc": "",
    "fname": "bar.schema.yml",
    "parent": "bar.yml",
    "stub": false,
    "title": "bar.yml",
    "type": "schema",
  },
]
`;
